doc: correct name of @Jammyjamjamman [skip ci]

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "configster"
 version = "0.1.1"
-authors = ["Andy Alt <andy400-dev@yahoo.com>", "James Sherrat"]
+authors = ["Andy Alt <andy400-dev@yahoo.com>", "James Sherratt"]
 edition = "2018"
 license = "MIT"
 description = "Library for parsing configuration files"
