update project description

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.1"
 authors = ["Andy Alt <andy400-dev@yahoo.com>", "James Sherratt"]
 edition = "2018"
 license = "MIT"
-description = "Library for parsing configuration files"
+description = "Rust library for parsing configuration files"
 homepage = "https://github.com/theimpossibleastronaut/configster"
 readme = "README.md"
 keywords = ["config", "parser", "library", "settings"]
