--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,6 @@ description = "Rust library for parsing configuration files"
 homepage = "https://github.com/theimpossibleastronaut/configster"
 readme = "README.md"
 keywords = ["config", "parser", "library", "settings"]
-categories = ["configuration", "parser-implementations"]
+categories = ["config", "parser-implementations"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
