--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "configster"
-version = "0.1.2"
+version = "0.1.2-dev"
 authors = ["Andy Alt <andy400-dev@yahoo.com>", "James Sherratt"]
 edition = "2018"
 license = "MIT"
