Cargo.toml:update contact info

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "configster"
 version = "0.1.2-dev"
-authors = ["Andy Alt <andy400-dev@yahoo.com>", "James Sherratt"]
-edition = "2021"
+authors = ["Andy Alt <arch_stanton5995@proton.me>", "James Sherratt"]
+edition = "2018"
 license = "MIT"
 description = "Rust library for parsing configuration files"
 homepage = "https://github.com/theimpossibleastronaut/configster"
